Prevent playback from cutting off content by adding :after content

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -28,3 +28,9 @@
 #content {
   padding-top: 80px;
 }
+
+#content:after {
+  background-color: #272B30;
+  width: 100%;
+  height: 140px;
+}
